--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
+    "fontawesome": "^5.6.3",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "sort-by": "^1.2.0",
+    "swiper": "^11.2.2",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
